# taskr

./: Cargo.toml  example.toml  package.json  readme.md  taskr-1.toml  taskr.toml
src/: cli.rs  config.rs  main.rs  watcher.rs
src/commands/: add.rs
