[package]
name = "taskr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.22"
